src/snapshots/raoul__tests__parse_ast_is_ok-7.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "test": Function {
                args: [],
                local_addresses: AddressManager(1, 0, 0, 0),
                name: "test",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    FLOAT: [],
                    STRING: [],
                    BOOL: [],
                    INT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 1,
            },
            "main": Function {
                args: [],
                local_addresses: AddressManager(1, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    FLOAT: [],
                    STRING: [],
                    BOOL: [],
                    INT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 0,
            },
            "test2": Function {
                args: [
                    Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                ],
                local_addresses: AddressManager(1, 0, 0, 0),
                name: "test2",
                return_type: INT,
                temp_addresses: TempAddressManager({
                    STRING: [],
                    INT: [],
                    BOOL: [],
                    FLOAT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 3,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(1, 0, 0, 0),
            variables: {
                "test2": Variable {
                    address: 0,
                    data_type: INT,
                    dimensions: (
                        None,
                        None,
                    ),
                    name: "test2",
                },
            },
        },
    },
    memory: ConstantMemory({BOOL: [], FLOAT: [], STRING: [], INT: [1, 2]}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     5    ,
        Assignment 3000  -     1000 ,
        EndProc    -     -     -    ,
        Return     1000  -     -    ,
        EndProc    -     -     -    ,
        Era        1     1     -    ,
        GoSub      1     -     -    ,
        Era        1     3     -    ,
        Param      3001  -     0    ,
        GoSub      3     -     -    ,
        Assignment 0     -     1000 ,
        Print      1000  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
