src/snapshots/raoul__tests__parse_ast_is_ok-8.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(2, 2, 0, 7),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    STRING: [],
                    INT: [
                        2001,
                    ],
                    FLOAT: [
                        2250,
                    ],
                    BOOL: [
                        2750,
                    ],
                }),
                variables: {
                    "i": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "i",
                    },
                    "f": Variable {
                        address: 1755,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "f",
                    },
                    "a": Variable {
                        address: 1750,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                    "e": Variable {
                        address: 1754,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "e",
                    },
                    "j": Variable {
                        address: 1001,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "j",
                    },
                    "c": Variable {
                        address: 1752,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "c",
                    },
                    "h": Variable {
                        address: 1251,
                        data_type: FLOAT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "h",
                    },
                    "d": Variable {
                        address: 1753,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "d",
                    },
                    "b": Variable {
                        address: 1751,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "b",
                    },
                    "k": Variable {
                        address: 1756,
                        data_type: BOOL,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "k",
                    },
                    "g": Variable {
                        address: 1250,
                        data_type: FLOAT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "g",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({STRING: [1, 2.1], INT: [1, 2, 3, 4], FLOAT: [2], BOOL: [true, false]}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Or         3750  3751  2750 ,
        Assignment 2750  -     1750 ,
        And        3000  3750  2750 ,
        Assignment 2750  -     1751 ,
        Lte        3000  3001  2750 ,
        Assignment 2750  -     1752 ,
        Lt         3500  3001  2750 ,
        Assignment 2750  -     1753 ,
        Gte        3001  3000  2750 ,
        Assignment 2750  -     1754 ,
        Gt         3001  3000  2750 ,
        Assignment 2750  -     1755 ,
        Eq         3002  3002  2750 ,
        Assignment 2750  -     1754 ,
        Ne         3002  3001  2750 ,
        Assignment 2750  -     1755 ,
        Sum        3501  3250  2250 ,
        Assignment 2250  -     1250 ,
        Minus      3001  3250  2250 ,
        Assignment 2250  -     1251 ,
        Times      3003  3003  2000 ,
        Assignment 2000  -     1000 ,
        Div        3003  3003  2001 ,
        Assignment 2001  -     1001 ,
        Not        3751  -     2750 ,
        Assignment 2750  -     1756 ,
        Print      1750  -     -    ,
        Print      1751  -     -    ,
        Print      1752  -     -    ,
        Print      1753  -     -    ,
        Print      1754  -     -    ,
        Print      1755  -     -    ,
        Print      1250  -     -    ,
        Print      1251  -     -    ,
        Print      1000  -     -    ,
        Print      1001  -     -    ,
        Print      1756  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
