src/snapshots/raoul__tests__parse_ast_is_ok-9.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(1, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    BOOL: [],
                    FLOAT: [],
                    INT: [],
                    STRING: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({BOOL: [], INT: [1, 0], STRING: [], FLOAT: []}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Div        3000  3001  2000 ,
        Assignment 2000  -     1000 ,
        Print      1000  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
