src/snapshots/raoul__tests__parse_ast_is_ok@array-list-index.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/invalid/dynamic/array-list-index.ra
---
0    - Goto       -     -     1
1    - Ver        3000  3000  -
2    - Sum        3001  3000  4000
3    - Assignment 3002  -     4000
4    - Ver        3000  3000  -
5    - Sum        3001  3000  4001
6    - Print      4001  -     -
7    - PrintNl    -     -     -
8    - End        -     -     -

