src/snapshots/raoul__tests__parse_ast_is_ok@array-simple.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/non-plot/array-simple.ra
---
0 - Goto       -     -     1    
1 - Ver        3001  3002  -    
2 - Sum        3000  3001  4000 
3 - Assignment 3003  -     4000 
4 - Ver        3003  3002  -    
5 - Sum        3000  3003  4001 
6 - Assignment 3004  -     4001 
7 - Ver        3004  3002  -    
8 - Sum        3000  3004  4002 
9 - Assignment 3002  -     4002 
10 - Ver        3001  3002  -    
11 - Sum        3000  3001  4003 
12 - Print      4003  -     -    
13 - Ver        3003  3002  -    
14 - Sum        3000  3003  4004 
15 - Print      4004  -     -    
16 - Ver        3004  3002  -    
17 - Sum        3000  3004  4005 
18 - Print      4005  -     -    
19 - Ver        3003  3002  -    
20 - Sum        3000  3003  4006 
21 - Print      4006  -     -    
22 - Ver        3001  3002  -    
23 - Sum        3000  3001  4007 
24 - Print      4007  -     -    
25 - PrintNl    -     -     -    
26 - End        -     -     -    

