src/snapshots/raoul__tests__parse_ast_is_ok@array.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/array.ra
---
0    - Goto       -     -     1
1    - Print      3500  -     -
2    - PrintNl    -     -     -
3    - Ver        3001  3002  -
4    - Sum        3000  3001  4000
5    - Assignment 3003  -     4000
6    - Ver        3003  3002  -
7    - Sum        3000  3003  4001
8    - Assignment 3004  -     4001
9    - Ver        3004  3002  -
10   - Sum        3000  3004  4002
11   - Assignment 3002  -     4002
12   - Assignment 3001  -     1003
13   - Lte        1003  3004  2750
14   - GotoF      2750  -     21
15   - Ver        1003  3002  -
16   - Sum        3000  1003  4003
17   - Print      4003  -     -
18   - PrintNl    -     -     -
19   - Inc        -     -     1003
20   - Goto       -     -     13
21   - Print      3501  -     -
22   - PrintNl    -     -     -
23   - Ver        3001  3004  -
24   - Times      3001  3002  2000
25   - Ver        3001  3002  -
26   - Sum        3005  2000  2001
27   - Sum        2001  3001  4004
28   - Assignment 3003  -     4004
29   - Ver        3001  3004  -
30   - Times      3001  3002  2001
31   - Ver        3003  3002  -
32   - Sum        3005  2001  2002
33   - Sum        2002  3003  4005
34   - Assignment 3004  -     4005
35   - Ver        3001  3004  -
36   - Times      3001  3002  2002
37   - Ver        3004  3002  -
38   - Sum        3005  2002  2001
39   - Sum        2001  3004  4006
40   - Assignment 3002  -     4006
41   - Ver        3003  3004  -
42   - Times      3003  3002  2001
43   - Ver        3001  3002  -
44   - Sum        3005  2001  2002
45   - Sum        2002  3001  4007
46   - Assignment 3003  -     4007
47   - Ver        3003  3004  -
48   - Times      3003  3002  2002
49   - Ver        3003  3002  -
50   - Sum        3005  2002  2001
51   - Sum        2001  3003  4008
52   - Assignment 3004  -     4008
53   - Ver        3003  3004  -
54   - Times      3003  3002  2001
55   - Ver        3004  3002  -
56   - Sum        3005  2001  2002
57   - Sum        2002  3004  4009
58   - Assignment 3002  -     4009
59   - Assignment 3001  -     1003
60   - Lte        1003  3003  2750
61   - GotoF      2750  -     76
62   - Assignment 3001  -     1010
63   - Lte        1010  3004  2750
64   - GotoF      2750  -     74
65   - Ver        1003  3004  -
66   - Times      1003  3002  2002
67   - Ver        1010  3002  -
68   - Sum        3005  2002  2001
69   - Sum        2001  1010  4010
70   - Print      4010  -     -
71   - PrintNl    -     -     -
72   - Inc        -     -     1010
73   - Goto       -     -     63
74   - Inc        -     -     1003
75   - Goto       -     -     60
76   - Print      3502  -     -
77   - PrintNl    -     -     -
78   - Assignment 3001  -     1003
79   - Lte        1003  3004  2750
80   - GotoF      2750  -     90
81   - Ver        1003  3002  -
82   - Sum        3006  1003  4011
83   - Assignment 1003  -     4011
84   - Ver        1003  3002  -
85   - Sum        3006  1003  4012
86   - Print      4012  -     -
87   - PrintNl    -     -     -
88   - Inc        -     -     1003
89   - Goto       -     -     79
90   - Print      3503  -     -
91   - PrintNl    -     -     -
92   - Assignment 3001  -     1003
93   - Lte        1003  3003  2750
94   - GotoF      2750  -     117
95   - Assignment 3001  -     1010
96   - Lte        1010  3003  2750
97   - GotoF      2750  -     115
98   - Ver        1003  3004  -
99   - Times      1003  3004  2001
100  - Ver        1010  3004  -
101  - Sum        3007  2001  2002
102  - Sum        2002  1010  4013
103  - Times      1003  3004  2002
104  - Sum        2002  1010  2001
105  - Assignment 2001  -     4013
106  - Ver        1003  3004  -
107  - Times      1003  3004  2001
108  - Ver        1010  3004  -
109  - Sum        3007  2001  2002
110  - Sum        2002  1010  4014
111  - Print      4014  -     -
112  - PrintNl    -     -     -
113  - Inc        -     -     1010
114  - Goto       -     -     96
115  - Inc        -     -     1003
116  - Goto       -     -     93
117  - End        -     -     -

